nyoba 4 gambar jadi 2 slide

--- a/laatihan-js-slide.html
+++ b/laatihan-js-slide.html
@@ -92,29 +92,38 @@
         </style>
 </head>
 <body>
-    <div class="slideshow-container">
-        <div class="slide fade">
-            <img src="gambar/IMG20200808165408.jpg" alt="gambar1" style="width: 100%;">
+        <div class="slideshow-container">
+            <div class="slide fade">
+                <img src="gambar/IMG20200808165408.jpg" alt="gambar1" style="width: 100%;">
+            </div>
+            <div class="slide fade">
+                <img src="gambar/IMG20200808165418.jpg" alt="gambar2" style="width: 100%;">
+            </div>
+
+            <div style="text-align: center;">
+              <span class="dot"></span>
+              <span class="dot"></span>
+            </div>
+            
         </div>
-        <div class="slide fade">
-            <img src="gambar/IMG20200808165418.jpg" alt="gambar2" style="width: 100%;">
-        </div>
-          <!-- <div style="text-align: center;">
-            <span class="dot"></span>
-            <span class="dot"></span>
-          </div> -->
-          <div class="slide fade" style="margin-bottom: 5px;">
-              <img src="gambar/IMG-20200808-WA0027.jpg" alt="gambar3" style="width: 100%;">
-          </div>
-              <div class="slide fade" style="margin-bottom: 5px;">
-                <img src="gambar/IMG-20200808-WA0029.jpg" alt="gambar3" style="width: 100%;">
+
+        <div  class="slideshow-container" style="margin-top: 50px;">
+              <div class="slide fade">
+                  <img src="gambar/IMG-20200808-WA0029.jpg" alt="gambar3" style="width: 100%;">
               </div>
+              <div class="slide fade">
+                  <img src="gambar/IMG-20200808-WA0027.jpg" alt="gambar3" style="width: 100%;">
+              </div>
+
               <div  style="text-align: center;">
-                  <span class="dot"></span>
-                  <span class="dot"></span>
-                  <span class="dot"></span>
-                  <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
               </div>
+
+        </div>
+
+
+
 
 </body>
 <script>
