--- a/laatihan-js-slide.html
+++ b/laatihan-js-slide.html
@@ -114,7 +114,7 @@
         </div>
 
         <div  class="slideshow-container1" style="margin-top: 50px;">
-              <div>
+              <div class="slide-a fade">
                   <img src="gambar/IMG-20200808-WA0029.jpg" alt="gambar3" style="width: 100%;">
               </div>
               <div class="slide-a fade">
@@ -122,8 +122,10 @@
               </div>
 
               <div  style="text-align: center;">
+                <span id="dot" class="dot-a"></span>
+                <span id="dot" class="dot-a"></span>
               </div>
-              
+
         </div>
 
 
@@ -144,7 +146,7 @@ showSlides2();
 function showSlides1() {
   let i;
   let slides = document.getElementsByClassName("slide");
-  let dots = document.getElementsByIdClassName("dot");
+  let dots = document.getElementsByClassClassName("dot");
   console.log(slides.length);
 
   for (i = 0; i < slides.length; i++) {
@@ -157,7 +159,7 @@ function showSlides1() {
   }
   slides[slideIndex-1].style.display = "block";  
   dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 2000); // Change image every 2 seconds
+  setTimeout(showSlides1, 2000); // Change image every 2 seconds
 }
 function showSlide2() {
     let slides = document.getElementsByClassName("slide-a")
