--- a/latihan-1.html
+++ b/latihan-1.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script>
+    <!-- <script>
         console.log("haloooo")
-    </script>
+    </script> -->
 </head>
 <body>
     <script>
-        document.write("hallo world")
+        var angkot = 1;
+        while (angkot <= 10) {
+            console.log("Angkot No. " + angkot + " beroperasi dengan baik.");
+            angkot++;
+        }
     </script>
 </body>
 </html>
